[package]
name = "TD1-Valentin-Bracq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.6"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
tokio = { version = "1.48.0", features = ["full", "macros", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
